# rust-w-db

./: Cargo.toml  README.md
src/: main.rs  server.rs
src/app/products/: handlers.rs  mod.rs
src/server/products/: entities.rs  handlers.rs  usecases.rs
