[package]
name = "app-register"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.1", features = ["full"] }
swagger = "6.5.0"
tokio-postgres = "0.7"
